# recruitment

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  seed_data.py  test_main.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
